troca do botão de contato no header para ícone no footer

--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!-- Limpeza e organização do código -->
 <!-- Deixar o site mais leve reduzindo os tamanhos das imagens -->
 <!-- Adição de links externos, conteúdo, e imagens -->
-<!-- remover console.log dos JavaScripts -->
+<!-- Remover console.log dos JavaScripts -->
 <!-- Remover comentários inúteis e adicionar comentários importantes -->
 <!-- Estilizar hr especial no css -->
+<!-- Colocar efeito hoover no footer -->
+<!-- Remover os css inutilizados -->
 
 <!DOCTYPE html>
 <html lang="pt-br">
@@ -29,7 +31,7 @@
                 </p>
 
                 <div class="apenas-desktop">
-                    <hr />
+                    <hr>
                     <div class="equipes">
                         <h2>Equipes</h2>
                         <ul>
@@ -84,7 +86,7 @@
                             </li>
                         </ul>
                     </div>
-                    <hr />
+                    <hr>
 
                     <div class="contato">
                         <h2>Contato</h2>
@@ -141,7 +143,7 @@
                     Os monitores REDMat atuaram ou atuam nos seguintes projetos de ensino do Instituto de Matemática e 
                     Estatística.
                 </p>
-                <!-- <p class="comentario">colocar links nos itens</p> -->
+                <p class="comentario">colocar links para página final nos itens</p>
 
                 <ul>
                     <li>
@@ -185,7 +187,7 @@
                     </li>
                 </ul>
 
-                <hr />
+                <hr>
 
                 <h2>
                     <a href="pages/livros-eletronicos.html">
@@ -197,13 +199,10 @@
                     Os monitores REDMat colaboraram na produção do seguinte material digital:
                 </p>
 
-                <p class="comentario">
-                    Alterar links nos itens caso a página de livros deixe de existir
-                </p>
 
                 <ul>
                     <li>
-                        <a href="pages/livros-eletronicos.html#calc-geogebra-v1">
+                        <a href="https://www.geogebra.org/m/hzvsftdf">
                             <img
                                 src="assets/icons/geogebra-icon-peq.png"
                                 alt="icone geogebra 3D"
@@ -213,7 +212,7 @@
                     </li>
 
                     <li>
-                        <a href="pages/livros-eletronicos.html#calc-geogebra-v2">
+                        <a href="https://www.geogebra.org/m/jke7hpfs">
                             <img
                                 src="assets/icons/geogebra-icon-peq.png"
                                 alt="icone geogebra 3D"
@@ -223,7 +222,7 @@
                     </li>
 
                     <li>
-                        <a href="pages/livros-eletronicos.html#geom-an-geogebra">
+                        <a href="https://www.geogebra.org/m/wtmkn9nv">
                             <img
                                 src="assets/icons/geogebra-icon-peq.png"
                                 alt="icone geogebra 3D"
@@ -233,47 +232,56 @@
                     </li>
 
                     <li>
-                        <a href="pages/livros-eletronicos.html#ap-calc-varias-var">
+                        <a href="https://redmatuff.github.io/calculovariasvariaveis/assets/pdf/apostila/apostila-completa.pdf">
                             <img src="assets/icons/livro-icone.png" alt="icone geogebra 3D" />
                             <p>Apostila Cálculo Diferencial de Várias Variáveis</p>
                         </a>
                     </li>
 
                     <li>
-                        <a href="pages/livros-eletronicos.html#ap-fgcv">
+                        <a href="https://fcgeometria.notion.site/fcgeometria/Fundamentos-de-C-lculo-e-Geometria-d169bff4f8e34c229fdd97b514ff02e4">
                             <img src="assets/icons/livro-icone.png" alt="icone geogebra 3D" />
                             <p>Apostila de FGCV</p>
                         </a>
                     </li>
 
+
+                </ul>
+                <hr>
+
+                <h2>
+                    <a href="pages/proj-ensino.html">
+                        Plataformas com participação do REDMat
+                    </a>
+                </h2>
+                <p>
+                    Os monitores REDMat atuaram nas seguintes plataformas:
+                </p>
+
+                <ul>
                     <li>
-                        <a href="pages/livros-eletronicos.html#site-calc-1a">
+                        <a href="http://www.gma.uff.br/calculo1a/">
                             <img src="assets/icons/site-icone.png" alt="icone geogebra 3D" />
                             <p>Site Cálculo&nbsp;1A (em&nbsp;andamento)</p>
                         </a>
                     </li>
 
                     <li>
-                        <a href="pages/livros-eletronicos.html#site-calc-2b">
+                        <a href="https://redmatuff.github.io/calculovariasvariaveis/">
                             <img src="assets/icons/site-icone.png" alt="icone geogebra 3D" />
                             <p>Site Cálculo&nbsp;2B (em&nbsp;andamento)</p>
                         </a>
                     </li>
 
                     <li>
-                        <a href="pages/livros-eletronicos.html#site-calc-3a">
+                        <a href="http://www.gma.uff.br/calculo3a/">
                             <img src="assets/icons/site-icone.png" alt="icone geogebra 3D" />
                             <p>Site Cálculo&nbsp;3A (em&nbsp;andamento)</p>
                         </a>
                     </li>
-
-                    <!-- Usar o código abaixo para manter número par de itens caso necessário -->
-                    <!-- <li style="display: none;">
-                                        <img src="" alt="">
-                                </li> -->
                 </ul>
 
-                <hr />
+                <hr>
 
                 <h2>
                     <a href="pages/recursos.html"> Recursos Computacionais </a>
@@ -283,7 +291,7 @@
                     Os monitores REDMat colaboraram na produção do seguinte material digital:
                 </p>
 
-                <!-- <p class="comentario">Fazer ícones mais minimalistas para esta área</p> -->
+                <p class="comentario">Colocar links para páginas finais</p>
 
                 <ul>
                     <li>
@@ -324,109 +332,11 @@
                     </li>
                 </ul>
 
-                <!--
-
-                        <section class="recurso">
-
-                        <h2>
-                                <a href="pages/recursos.html">Recursos Computacionais</a>
-                        </h2>
-                        <p>Os monitores REDMat produziram o seguinte material digital.</p>
-
-                        <section id="func-uma-var">
-                                <a href="pages/recursos.html#func-uma-var">
-                                        <h3>Funções de Uma Variável</h3>
-                                </a>
-                                <div class="recurso-container">
-                                        <div>
-                                                <a href="pages/recursos.html#func-uma-var">
-                                                        <img src="assets/img/func.png" alt="Funções de Uma Variável">
-                                                </a>
-                                                <div class="recurso-box">
-                                                        <p class="comentario"> colocar aqui os textos das paginas dos recursos</p>
-                                                        <p>Nesta seção, os monitores REDMat apresentam um material digital envolvente e informativo sobre as "Funções de Uma Variável". Explore conceitos fundamentais de matemática por meio de recursos visuais dinâmicos, proporcionando uma compreensão mais acessível e prazerosa.</p>
-                                                </div>
-                                        </div>
-                                </div>
-                        </section>
-                        <hr>
-
-                        <section id="calc-func-uma-var">
-                                <a href="pages/recursos.html#calc-func-uma-var">
-                                        <h3>Cálculo de Funções de Uma Variável</h3>
-                                </a>
-                                <div class="recurso-container">
-                                        <div>
-                                                <a href="pages/recursos.html#calc-func-uma-var">
-                                                        <img src="assets/img/calc1.png" alt="Cálculo de Funções de Uma Variável">
-                                                </a>
-                                                <div class="recurso-box">
-                                                        <p class="comentario"> colocar aqui os textos das paginas dos recursos</p>
-
-                                                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis saepe provident mollitia? Tempora mollitia id libero maxime officia quae dolores nesciunt corrupti! Molestiae, non nulla accusantium fugit dignissimos facilis laborum?</p>
-                                                </div>
-                                        </div>
-                                </div>
-                        </section>
-                        <hr>
-
-                        <section id="calc-func-varias-var">
-                                <a href="pages/recursos.html#calc-func-varias-var">
-                                        <h3>Cálculo de Funções de Várias Variável</h3>
-                                </a>
-                                <div class="recurso-container">
-                                        <div>
-                                                <a href="pages/recursos.html#calc-func-varias-var">
-                                                        <img src="assets/img/calc2.png" alt="Cálculo de Funções de Várias Variável">
-                                                </a>
-                                                <div class="recurso-box">
-                                                        <p class="comentario"> colocar aqui os textos das paginas dos recursos</p>
-
-                                                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis saepe provident mollitia? Tempora mollitia id libero maxime officia quae dolores nesciunt corrupti! Molestiae, non nulla accusantium fugit dignissimos facilis laborum?</p>
-                                                </div>
-                                        </div>
-                                </div>
-                        </section>
-                        <hr>
-
-                        <section id="edo">
-                                <a href="pages/recursos.html#edo">
-                                        <h3>Equações Diferenciais Ordinárias</h3>
-                                </a>
-                                <div class="recurso-container">
-                                        <div>
-                                                <a href="pages/recursos.html#edo">
-                                                        <img src="assets/img/edo.png" alt="Equações Diferenciais Ordinárias">
-                                                </a>
-                                                <div class="recurso-box">
-                                                        <p class="comentario"> colocar aqui os textos das paginas dos recursos</p>
-
-                                                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis saepe provident mollitia? Tempora mollitia id libero maxime officia quae dolores nesciunt corrupti! Molestiae, non nulla accusantium fugit dignissimos facilis laborum?</p>
-                                                </div>
-                                        </div>
-                                </div>
-                        </section>
-
-
-
-
-                        </section>
-                        -->
-
-                <!--                         
-                        <h3>Titulo 3</h3>
-                        <h4>Título 4</h4>
-                        <h5>Título 5</h5>
-                        <h6>Título 6</h6>
-                        <p>Texto comum</p>
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo beatae tempora voluptatum qui iste sapiente, placeat obcaecati ipsam natus non exercitationem, commodi nesciunt. Porro, maiores praesentium? Sed provident unde veritatis?</p>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta modi, eligendi asperiores obcaecati totam dolorem quisquam minima incidunt magni sapiente praesentium enim similique quasi, voluptatibus magnam laboriosam earum itaque qui.</p> -->
             </section>
         </main>
 
         <footer></footer>
 
-        <!-- <script src="assets/js/index"></script> -->
         <script src="assets/js/insere-header.js"></script>
         <script src="assets/js/menu.js"></script>
         <script src="assets/js/insere-footer.js"></script>
