--- a/pages/livros-eletronicos.html
+++ b/pages/livros-eletronicos.html
@@ -20,9 +20,9 @@
         <section class="sobre">
             <h2>Livros Eletrônicos</h2>
 <!-- Alterar este texto -->
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate cum praesentium harum nesciunt quas, atque accusamus ad quae ducimus sint corrupti tempore enim. Explicabo nam, atque eum reiciendis quas asperiores.</p>
+            <p class="revisar">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate cum praesentium harum nesciunt quas, atque accusamus ad quae ducimus sint corrupti tempore enim. Explicabo nam, atque eum reiciendis quas asperiores.</p>
             <span class="apenas-desktop">
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatum cumque hic repellendus unde culpa optio numquam molestias, temporibus adipisci fugiat reprehenderit! Ipsam, nulla molestias mollitia accusantium asperiores quod aliquam quo.</p>
+                <p class="revisar">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatum cumque hic repellendus unde culpa optio numquam molestias, temporibus adipisci fugiat reprehenderit! Ipsam, nulla molestias mollitia accusantium asperiores quod aliquam quo.</p>
             </span>
         </section>
 
@@ -109,64 +109,6 @@
                     </div>
                 </div>
             </section>
-
-            <!-- <hr>
-
-            <section id="site-calc-1a">
-                <div class="recurso-container">
-
-                    <h3>Site Cálculo 1A (em andamento)</h3>
-                    <h5>Monitores:</h5>
-                    <h6>Data: --/----</h6>
-                    <div class="recurso-descricao">
-                        <div>
-                            <a href="http://www.gma.uff.br/calculo1a/">
-                                <img src="../assets/img/img-padrao.bmp" alt="Site Cálculo 1A (em andamento)">
-                            </a>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis saepe provident mollitia? Tempora mollitia id libero maxime officia quae dolores nesciunt corrupti! Molestiae, non nulla accusantium fugit dignissimos facilis laborum?</p>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus quidem possimus consequuntur odit tempora deleniti minima, perferendis animi ratione sint. Ullam dolorum odio soluta neque voluptatibus nesciunt modi consectetur amet! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos alias corrupti neque eaque, labore tempore ad dolore enim. Quidem officiis voluptate voluptatem tenetur velit error quis corporis optio autem neque!</p>  
-                        </div>
-                    </div>
-                </div> 
-            </section>
-            <hr>
-
-            <section id="site-calc-2b">
-                <div class="recurso-container">
-
-                    <h3>Site Cálculo 2B (em andamento)</h3>
-                    <h5>Monitores:</h5>
-                    <h6>Data: --/----</h6>
-                    <div class="recurso-descricao">
-                        <div>
-                            <a href="">
-                                <img src="../assets/img/img-padrao.bmp" alt="Site Cálculo 2B (em andamento)">
-                            </a>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis saepe provident mollitia? Tempora mollitia id libero maxime officia quae dolores nesciunt corrupti! Molestiae, non nulla accusantium fugit dignissimos facilis laborum?</p>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi quidem vel rerum, iste alias incidunt ea consequatur ex est, dolores autem, eaque harum. Eveniet alias dolorum tenetur deserunt! Delectus, odit. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus, aliquam id. Numquam provident ipsa esse voluptatibus pariatur, ex blanditiis soluta cumque sunt molestias veritatis repellendus sit? Fuga veritatis velit ea.</p>
-                        </div>
-                    </div>
-                </div> 
-            </section>
-            <hr>
-
-            <section id="site-calc-3a">
-                <div class="recurso-container">
-
-                    <h3>Site Cálculo 3A</h3>
-                    <h5>Monitores:</h5>
-                    <h6>Data: --/----</h6>
-                    <div class="recurso-descricao">
-                        <div>
-                            <a href="http://www.gma.uff.br/calculo3a/">
-                                <img src="../assets/img/img-padrao.bmp" alt="Site Cálculo 3A (em andamento)">
-                            </a>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis saepe provident mollitia? Tempora mollitia id libero maxime officia quae dolores nesciunt corrupti! Molestiae, non nulla accusantium fugit dignissimos facilis laborum?</p>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio expedita eligendi suscipit? Minima blanditiis quod ab nisi sunt quis sit vitae delectus, facere eveniet ratione assumenda deleniti laborum? Nam, delectus. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas dolore, alias aut dolores, eius reiciendis, modi laborum beatae nisi ipsam itaque est laboriosam a consectetur commodi blanditiis autem sint soluta?</p>
-                        </div>
-                    </div>
-                </div> 
-            </section> -->
 
         </section>      
         
