Sticky na coluna verde da esquerda. Footer e header com hover nos botões

--- a/pages/proj-ensino.html
+++ b/pages/proj-ensino.html
@@ -19,12 +19,12 @@
             <section class="sobre">
                 <h1>Projetos de Ensino</h1>
                 <p class="revisar">
-                    Um texto descrevendo o que são os projetos. (Esta parte aparece em desktops e celulares)
+                    Um texto descrevendo o que são os projetos. (Esta parte aparece em desktops e celulares,)
                 </p>
                 <span class="apenas-desktop">
                     <p>
                         (Esta parte aparece apenas em desktops.) <br>
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corrupti adipisci dolorum, aspernatur animi in culpa cumque accusamus asperiores veritatis illo quod similique qui quaerat, laborum placeat? Laudantium sit ullam fuga!
+                        Sugestão: colocar os links dos projetos da página.
                     </p>
                 </span>
             </section>
